plugins/kotlin/idea/tests/testData/highlighterMetaInfo/KotlinInjection.kt.highlighting
// IGNORE_FIR
package language_injection

<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>import<!> org.intellij.lang.annotations.<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ANNOTATION'")!>Language<!>

<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ANNOTATION'")!>@Language<!>("kotlin")
val <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PACKAGE_PROPERTY'")!>test<!> = "<!HIGHLIGHTING("severity='INJECTED_FRAGMENT'; textAttributesKey='kotlin:INJECTED_LANGUAGE_FRAGMENT'")!><!HIGHLIGHTING("severity='INJECTED_FRAGMENT_SYNTAX'; textAttributesKey='null'"), HIGHLIGHTING("severity='INJECTED_FRAGMENT_SYNTAX'; textAttributesKey='null'")!>fun<!><!HIGHLIGHTING("severity='INJECTED_FRAGMENT_SYNTAX'; textAttributesKey='null'")!> <!><!HIGHLIGHTING("severity='INJECTED_FRAGMENT_SYNTAX'; textAttributesKey='null'")!>test2<!><!HIGHLIGHTING("severity='INJECTED_FRAGMENT_SYNTAX'; textAttributesKey='null'")!>(<!><!HIGHLIGHTING("severity='INJECTED_FRAGMENT_SYNTAX'; textAttributesKey='null'")!>)<!><!HIGHLIGHTING("severity='INJECTED_FRAGMENT_SYNTAX'; textAttributesKey='null'")!> <!><!HIGHLIGHTING("severity='INJECTED_FRAGMENT_SYNTAX'; textAttributesKey='null'")!>{<!><!HIGHLIGHTING("severity='INJECTED_FRAGMENT_SYNTAX'; textAttributesKey='null'")!>}<!><!>"
